# Simple-Manual-Map-Injector

./: .gitignore  BUILD.md  BUILD_UNIVERSAL.md  CHANGES.md  CHANGES_SUMMARY.md  CMakeLists.txt  CROSS_ARCH_GUIDE.md  ENCRYPTION.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  PR_ENCRYPTED_INJECTION.md  PR_SUMMARY.md  PYTHON_IMPLEMENTATION.md  PYTHON_PORT_SUMMARY.md  QUICKSTART.md  QUICKSTART_PYTHON.md  README.md  README.ru.md  SECURITY_FEATURES.md  SECURITY_SUMMARY.md  UNIVERSAL_BUILD_README.md  anti_protection.py  build-all.bat  build-all.ps1  build_all.bat  build_all.sh  dll_encryptor.py  encrypt_dll.py  example_encrypted_injection.py  example_encrypted_python.py  example_python.py  injector.py  key_data.py  loader_gui_test.py  manual_map_injector.py
Manual Map Injector/: anti_debug.h  crypto.cpp  crypto.h  encryption.h  injector.cpp  injector.h  injector_dll.cpp  launcher.cpp  main.cpp
